# tokefx-dev

./: .gitignore  NOTES  README.md  debug_parquet  pyproject.toml
configs/: debug_config.toml  llama_config.toml  qwen_001_config.toml  qwen_003_config.toml  qwen_005_config.toml  qwen_config.toml  qwen_mean_config.toml  toksuite_001_config.toml  toksuite_003_config.toml  toksuite_005_config.toml  toksuite_config.toml  toksuite_mean_config.toml
docker/: Dockerfile  run_in_container
docs/: Makefile  references.bib
docs/article/: acl_latex.tex
docs/brief_presentation/: slides.tex
docs/proposal/: main.tex  slides.tex
docs/scripts/: build_plots  heatmap.py  rr.py  stacked.py  table.py
docs/thesis/: main.tex
docs/update_methodology/: slides.tex
docs/update_results/: slides.tex
scripts/: attention.py  attention_qwen.py  benchmark.py  config.toml  lahis.py  patchscopes.py  rho.py  run
slurm/: attention.sh  attention_llama.sh  attention_qwen.sh  attention_qwen_mean.sh  attention_toksuite_mean.sh  benchmark.sh  qwen.sh  qwen_001.sh  qwen_003.sh  qwen_005.sh  toksuite.sh
test/: full_run.sh  minimal.toml
tokefx/: constants.py  data.py  encoder.py  plot.py  utils.py
tokefx/benchmarks/: belebele.py  fertility.py  xcopa.py  xnli.py
tokefx/interpretability/: attention.py  lahis.py  patchscopes.py
tokefx/oneoff/: abl_pct_stack.py  abl_pct_table.py  bytelevelpretokenization.py  layerwise_table.py  printspecialtokens.py  release.py  retrieved_rate.py  stacked_solo.py  vocab_sizes.py
tokefx/plot/: attention.py  lahis.py  patchscopes.py
(+49 files in other folders)
