[project]
name = "tokefx"
version = "0.0.1"
description = "Tokenization Effects in LLMs"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com" }
]
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "toml",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tokefx"]
