[project]
name = "tokefx"
version = "0.0.1"
description = "Tokenization Effects in LLMs"
readme = "README.md"
requires-python = ">=3.10.2"
authors = [
    { name="Gustaf Gren", email="6107181+skogsgren@users.noreply.github.com" }
]
license = "GPL-3.0-or-later"
dependencies = [
    "toml==0.10.2",
    "conllu==6.0.0",
    "transformers==4.51.3",
    "datasets==4.5.0",
    "optree>=0.13.0",
    "sentencepiece==0.2.1",
    "deepmerge==2.0",
    "python-iso639==2026.1.31",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "icecream",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
ignore = ["F401"]

[tool.setuptools.packages.find]
where = ["."]
